feat: changing VcApiController.initiateExchange renspond with 404 instead of 201 and errors array
